--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="../burger/img/favicon.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="../burger/img/favicon.ico">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
