--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 
 <body>
+    <h1>Заказы</h1>
+    <div>
+        <div>На этой странице выводятся заказы, оплаченные на год:</div>
+        <ul>
+            <li>Apple Pencil</li>
+            <li>Macbook Pro</li>
+            <li>iPad Mini</li>
+        </ul>
+    </div>
+    <hr>
+    <div>
+        <div>Ознакомьтесь с условиями:</div>
+        <ol>
+            <li><a href="#">Как оформить заказы</a></li>
+            <li><a href="#">Способы доставки</a></li>
+            <li><a href="#">Оплата и доставка</a></li>
+        </ol>
+    </div>
+    <div>
+        И помните, что <q>Многие люди терпят неудачи только потому, что сдаются в двух шагах от успеха</q>
+    </div>
 </body>
 
 </html>
