--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </aside>
         <main>
             <h1>Результаты поиска по слову "вёрстка"</h1>
-            <div class="sections">
+            <div class="results">
                 <section>
                     <h3>Вёрстка сайтов под ключ</h3>
                     <p>Мы создаем сайты за 1 месяц и дарим логотип в подарок <a href="#">Далее</a></p>
